--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -33,7 +33,7 @@ jobs:
           plugin_languages_ignored: html, css, scss
           plugin_languages_skipped: lowlighter/metrics
           plugin_languages_limit: 8
-          plugin_languages_sections: most-used, recently-used
+          plugin_languages_sections: most-used
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
 
