--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -35,6 +35,7 @@ jobs:
           plugin_languages_skipped: lowlighter/metrics, mwaleed580/Eureka-Booking, mwaleed580/RepliBlocks, mwaleed580/Jobi
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
+          plugin_languages_recent: no
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
 
