--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,6 +3,9 @@ on:
   schedule: [{cron: "0 */12 * * *"}]  # Every 12 hours
   workflow_dispatch:                   # Allow manual runs
 
+permissions:
+  contents: write
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
