--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -34,13 +34,16 @@ jobs:
           plugin_isocalendar_duration: full-year
 
           plugin_languages: yes
-          plugin_languages_ignored: html, css, scss
-          plugin_languages_skipped: lowlighter/metrics, mwaleed580/Eureka-Booking, mwaleed580/RepliBlocks, mwaleed580/Jobi
+          plugin_languages_skipped: lowlighter/metrics
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
           plugin_languages_recent: no
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
+
+          plugin_topics: yes
+          plugin_topics_limit: 0
+          plugin_topics_mode: icons
 
           plugin_lines: yes
 
