Update GitHub Profile Metrics workflow configuration

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,7 @@
 name: GitHub Profile Metrics
 on:
-  schedule: [{cron: "0 */12 * * *"}]  # Every 12 hours
-  workflow_dispatch:                   # Allow manual runs
+  schedule: [{cron: "0 */12 * * *"}] 
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -34,12 +34,17 @@ jobs:
           plugin_isocalendar_duration: full-year
 
           plugin_languages: yes
-          plugin_languages_skipped: lowlighter/metrics
+          plugin_languages_mode: icons
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
-          plugin_languages_recent: no
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
+          plugin_languages_skipped: lowlighter/metrics
+          plugin_languages_recent: no
+          plugin_languages_indepth: yes
+          plugin_languages_aliases: yes
+          plugin_languages_categories: programming, markup, data
+          plugin_languages_details: percentage, bytes-size, lines
 
           plugin_topics: yes
           plugin_topics_limit: 0
