--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,9 +1,7 @@
 name: GitHub Profile Metrics
-
 on:
-  schedule:
-    - cron: "0 */12 * * *" # Every 12 hours
-  workflow_dispatch: # Allow manual runs
+  schedule: [{cron: "0 */12 * * *"}]  # Every 12 hours
+  workflow_dispatch:                   # Allow manual runs
 
 permissions:
   contents: write
@@ -16,58 +14,44 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # --- Basic Info ---
+          # --- Basic settings ---
           user: mwaleed580
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Karachi
+          config_ignore_errors: yes
 
-          # --- Visual Customization ---
+          # --- Visual customization ---
           config_display: large
           config_padding: 0, 12
-          config_order: base.header, base.repositories, base.metadata, languages, activity, community
+          config_order: base.header, base.repositories, base.metadata, activity, community
           config_twemoji: yes
-          config_octicon: yes
           config_animations: yes
+          config_octicon: yes
 
           # --- Plugins ---
-
-          ## 🗓 Contribution Calendar
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
 
-          ## 💻 Languages (with icons)
           plugin_languages: yes
-          plugin_languages_sections: most-used
+          plugin_languages_ignored: html, css, scss
+          plugin_languages_skipped: lowlighter/metrics, mwaleed580/Eureka-Booking, mwaleed580/RepliBlocks, mwaleed580/Jobi
           plugin_languages_limit: 8
-          plugin_languages_details: bytes-size, percentage, lines, icons
+          plugin_languages_sections: most-used
+          plugin_languages_recent: no
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
-          plugin_languages_skipped: lowlighter/metrics
-          plugin_languages_indepth: yes
-          plugin_languages_aliases: yes
-          plugin_languages_categories: programming, markup, data
 
-          ## 🧩 Topics (with icons)
-          plugin_topics: yes
-          plugin_topics_limit: 12
-          plugin_topics_mode: icons
-
-          ## 📈 Lines of Code
           plugin_lines: yes
 
-          ## 📦 Featured Repositories
           plugin_repositories: yes
           plugin_repositories_featured: mwaleed580/wordpress-plugin-boilerplate, mwaleed580/dynamic-content-display
           plugin_repositories_order: stars, pushed
 
-          ## 🌟 Stargazers
           plugin_stargazers: yes
           plugin_stargazers_charts: yes
 
-          ## 📊 Follow-up Stats
           plugin_followup: yes
           plugin_followup_sections: repositories, user
 
-          ## 🚦 Traffic Insights
           plugin_traffic: yes
