--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,7 @@
 name: GitHub Profile Metrics
 on:
-  schedule: [{cron: "0 */12 * * *"}]  # Every 12 hours
-  workflow_dispatch:                   # Allow manual runs
+  schedule: [{cron: "0 */12 * * *"}]
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -13,15 +13,13 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-
-          # --- Basic settings ---
+          
           user: mwaleed580
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Karachi
           config_ignore_errors: yes
 
-          # --- Visual customization ---
           config_display: large
           config_padding: 0, 12
           config_order: base.header, base.repositories, base.metadata, activity, community
@@ -29,13 +27,11 @@ jobs:
           config_animations: yes
           config_octicon: yes
 
-          # --- Plugins ---
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
 
           plugin_languages: yes
-          plugin_languages_ignored: html, css, scss
-          plugin_languages_skipped: lowlighter/metrics, mwaleed580/Eureka-Booking, mwaleed580/RepliBlocks, mwaleed580/Jobi
+          plugin_languages_skipped: lowlighter/metrics
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
           plugin_languages_recent: no
