--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,17 +9,26 @@ permissions:
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+
     steps:
+
+      #############################################
+      # DESKTOP VERSION (FULL LANDSCAPE)
+      #############################################
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          
+
+          filename: github-metrics.svg
+
+          # --- Basic settings ---
           user: mwaleed580
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Karachi
           config_ignore_errors: yes
 
+          # --- Visual customization ---
           config_display: large
           config_padding: 0, 12
           config_order: base.header, base.repositories, base.metadata, activity, community
@@ -27,6 +36,7 @@ jobs:
           config_animations: yes
           config_octicon: yes
 
+          # --- Plugins ---
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
 
@@ -34,7 +44,60 @@ jobs:
           plugin_languages_skipped: lowlighter/metrics
           plugin_languages_limit: 8
           plugin_languages_sections: most-used
+          plugin_languages_colors: github
+          plugin_languages_threshold: 0%
           plugin_languages_recent: no
+          plugin_languages_indepth: yes
+
+          plugin_lines: yes
+
+          plugin_repositories: yes
+          plugin_repositories_featured: mwaleed580/wordpress-plugin-boilerplate, mwaleed580/dynamic-content-display
+          plugin_repositories_order: stars, pushed
+
+          plugin_stargazers: yes
+          plugin_stargazers_charts: yes
+
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
+
+          plugin_traffic: yes
+
+      #############################################
+      # MOBILE VERSION (FULL FEATURED, PORTRAIT)
+      #############################################
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+
+          filename: github-metrics-mobile.svg
+
+          # --- Mobile-friendly portrait layout ---
+          user: mwaleed580
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Asia/Karachi
+          config_ignore_errors: yes
+          
+          # KEY POINT: Compact + portrait
+          config_display: compact
+          config_padding: 0, 4
+          config_twemoji: yes
+          config_animations: no
+          config_octicon: yes
+
+          # Ordering optimized for vertical layout
+          config_order: base.header, languages, activity, community, base.repositories, base.metadata
+
+          # --- Exact same plugins as desktop ---
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+
+          plugin_languages: yes
+          plugin_languages_skipped: lowlighter/metrics
+          plugin_languages_limit: 8
+          plugin_languages_indepth: yes
+          plugin_languages_sections: most-used
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
 
