--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,24 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-      #############################################
-      # DESKTOP VERSION (FULL LANDSCAPE)
-      #############################################
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
           filename: github-metrics.svg
 
-          # --- Basic settings ---
           user: mwaleed580
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Karachi
           config_ignore_errors: yes
 
-          # --- Visual customization ---
           config_display: large
           config_padding: 0, 12
           config_order: base.header, base.repositories, base.metadata, activity, community
@@ -36,7 +30,6 @@ jobs:
           config_animations: yes
           config_octicon: yes
 
-          # --- Plugins ---
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
 
@@ -62,33 +55,26 @@ jobs:
 
           plugin_traffic: yes
 
-      #############################################
-      # MOBILE VERSION (FULL FEATURED, PORTRAIT)
-      #############################################
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
 
           filename: github-metrics-mobile.svg
 
-          # --- Mobile-friendly portrait layout ---
           user: mwaleed580
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Karachi
           config_ignore_errors: yes
           
-          # KEY POINT: Compact + portrait
           config_display: compact
           config_padding: 0, 4
           config_twemoji: yes
           config_animations: no
           config_octicon: yes
 
-          # Ordering optimized for vertical layout
-          config_order: base.header, languages, activity, community, base.repositories, base.metadata
+          config_order: base.header, base.repositories, base.metadata, languages, activity, community
 
-          # --- Exact same plugins as desktop ---
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
 
